...

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_exit_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:contentDescription="@string/changeview_desc"
            android:src="@drawable/ic_exit"
...
